# SAGE

./: .actrc  .cleanup_report.md  .coverage  .env  .env.template  .env.test  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pypirc  .pyrightconfig.json  .pytestignore  .sage  .secrets.baseline  ARCHITECTURE_CHECKER_QUICKSTART.md  ARCHITECTURE_REDESIGN.md  BUILD_GUIDE.md  BYTECODE_COMPILE_GUIDE.md  CALL_SERVICE_REFACTORING_ISSUE.md  CHANGELOG.md  CHANGELOG_code_quality.md  CI_BUILD_WRAPPERS_SUMMARY.md  CI_CPP_EXTENSIONS_FIX.md  CI_FINAL_CHECKLIST.md  CI_FIX_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_INTEGRATION_ENHANCEMENT.md  CLI_REFACTOR_SUMMARY.md  CLUSTER_INTEGRATION_TESTING_ISSUE.md  CODE_MIGRATION_PLAN.md  COMMERCIAL_CLEANUP_SUMMARY.md  COMMERCIAL_STRATEGY.md  COMMIT_SUMMARY.md  CONDA_ENV_CUSTOMIZATION.md  CONTRIBUTING.md  DEPENDENCY_OPTIMIZATION_SUMMARY.md  DEVELOPER.md  DEVELOPER_GUIDE.md  DEVELOPMENT_MODE_GUIDE.md  (+275 more)
.github/: ANNS_REFACTOR_COMPLETE.md  COMMAND_REMOVAL_COMPLETE.md  COMMIT_MESSAGE_TEST_REORG.md  COPILOT_SETUP.md  PHASE1_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  REMOVAL_PLAN_LLM_COMMANDS.md  SECRETS_SETUP.md  TASK_J_PHASE2_COMPLETE.md  TEST_REORGANIZATION_REPORT.md  WORKFLOW_OPTIMIZATION.md  ci-config.yml  copilot-instructions.md  sage.chatmode.md.example
.sage/: MIGRATION_GUIDE.md  README.md
app/: README.md  __init__.py  config.yaml  config_for_ingest.yaml  config_for_qa.yaml  config_local.yaml  datastream_app_example.py  datastream_rag_pipeline.py  external_memory_ingestion_pipeline.py  graph_config.yaml  graph_test.py  hello_world.py  helloworld.py  kafka_query.py  local_pipeline.py  multiagent_app.py  multiple_pipeline.py  mutiple_pipeline.py  new_pipeline.py  per_query_inference_example.py  pipeline_test.py  qa_batch.py  qa_bm25_retrieval.py  qa_bm25_retrieval_edit.py  qa_dense_retrieval copy.py  qa_dense_retrieval.py  qa_dense_retrieval_mixed.py  qa_dense_retrieval_ray.py  qa_evaluate.py  qa_hf.py  qa_multiplex.py  qa_one_shot.py  qa_openai.py  qa_openai_chat_history.py  qa_pipeline.py  qa_pipeline_flink.py  qa_refiner.py  qa_refiner_batch.py  qa_rerank.py  qa_source.py  (+6 more)
archive/: collection_wrapper.py  dag_manager.py  executor_manager.py  executor_test.py  operator_factory.py  operator_wrapper.py  raydag_task.py
config/: README.md  cluster.yaml  config copy.yaml  config.yaml  config_adaptive.yaml  config_batch.yaml  config_bm25s.yaml  config_enhanced.yaml  config_evaluate.yaml  config_for_ingest.yaml  config_for_qa.yaml  config_hf.yaml  config_mixed.yaml  config_multiplex.yaml  config_ray.yaml  config_refiner.yaml  config_rerank.yaml  config_source.yaml  (+5 more)
dev-toolkit/: INTEGRATION_COMPLETE.md  README.md  pyproject.toml
dev-toolkit/src/sage_dev_toolkit/: __init__.py
dev-toolkit/src/sage_dev_toolkit/cli/: __init__.py  main.py
dev-toolkit/src/sage_dev_toolkit/core/: __init__.py  config.py  toolkit.py
dev-toolkit/src/sage_dev_toolkit/tools/: __init__.py  commercial_package_manager.py  enhanced_package_manager.py  enhanced_test_runner.py  import_path_fixer.py  one_click_setup.py
dev-toolkit/src/sage_dev_toolkit/utils/: sage_home.py
sage_flow/: .clang-tidy  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PYTHON_BINDINGS_SUMMARY.md  README.md  TODO.md  build.sh  demo_environment_system.py  demo_python_api.py  minimal_test.py  safe_demo.py  setup.py  test_data_sources.py  test_implementation.py  test_python_bindings.py
sage_flow/TODO/: README.md  api-requirements.md  coding-standards.md  phase1-core-types.md  phase2-stream-engine.md  phase3-data-processing.md  phase4-optimization.md  phase6-integration.md  refactoring-data-sources.md
sage_flow/include/core/: message.h
sage_flow/include/environment/: sage_flow_environment.h
sage_flow/include/function/: document_parser_function.h  quality_assessor_function.h  text_cleaner_function.h  text_processing.h
sage_flow/include/index/: brute_force_index.h  hnsw.h  hnsw_index.h  index.h  index_operator.h  index_operators.h  index_types.h  itopk_operator.h  ivf.h  knn_operator.h
sage_flow/include/memory/: memory_pool.h
sage_flow/include/message/: content_type.h  multimodal_message.h  multimodal_message_core.h  retrieval_context.h  vector_data.h
sage_flow/include/operator/: aggregate_operator.h  base_operator.h  filter_operator.h  join_operator.h  map_operator.h  operator.h  operator_types.h  response.h  sink_operator.h  source_operator.h  topk_operator.h  window_operator.h
sage_flow/include/sources/: data_source.h  data_source_factory.h  file_data_source.h  kafka_data_source.h  stream_data_source.h
sage_flow/proto/: multimodal_message.proto
sage_flow/src/environment/: sage_flow_environment.cpp
sage_flow/src/function/: document_parser_function.cpp  quality_assessor_function.cpp  text_cleaner_function.cpp  text_processing.cpp
sage_flow/src/index/: brute_force_index.cpp  hnsw.cpp  hnsw_simple.cpp  index_factory.cpp  index_operators.cpp  itopk_operator.cpp  ivf.cpp  knn_operator.cpp
sage_flow/src/memory/: memory_pool.cpp
sage_flow/src/message/: multimodal_message_core.cpp  retrieval_context.cpp  vector_data.cpp
sage_flow/src/operator/: aggregate_operator.cpp  base_operator.cpp  filter_operator.cpp  join_operator.cpp  map_operator.cpp  operator.cpp  operator_factory.cpp  response.cpp  sink_operator.cpp  source_operator.cpp  topk_operator.cpp  window_operator.cpp
sage_flow/src/python/: bindings.cpp
sage_flow/src/sources/: data_source_factory.cpp  file_data_source.cpp  kafka_data_source.cpp  stream_data_source.cpp
tools/templates/new-repo/: .pre-commit-config.yaml  codecov.yml  pyproject.toml  pytest.ini  quickstart.sh  ruff.toml
tools/templates/new-repo-cpp/: CMakeLists.txt  build_manylinux.sh  pyproject.toml
tools/templates/new-repo-cpp/.github/workflows/: release.yml
tools/templates/new-repo-cpp/csrc/: bindings.cpp
tools/templates/new-repo/.github/workflows/: back-sync.yml  ci.yml  release.yml  update-deps.yml  version-source-guard.yml
tools/templates/new-repo/hooks/: post-commit  pre-commit  pre-push
tools/templates/new-repo/src/my_pkg/: __init__.py  _version.py
(+5022 files in other folders)
