[build-system]
requires = ["setuptools>=64", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "isage"
dynamic = ["version"]
description = "SAGE - Streaming-Augmented Generative Execution (meta package)"
readme = "README.md"
authors = [{ name = "SAGE Team", email = "shuhao_zhang@hust.edu.cn" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    # L1 — base utilities, config, logging, protocols, platform abstractions + algorithm interfaces (sage.libs.*)
    "isage-common>=0.2.5.0",
    # L2 — streaming runtime, scheduler, flow DSL + pipeline middleware (sage.middleware.*)
    "isage-kernel>=0.2.5.0",
    # L2 — intent recognition for tool-use agents
    "isage-libs-intent>=0.1.0.7",
    # L3 — RAG pipelines (vector store backends migrated to isage-rag 0.3.0)
    "isage-rag>=0.3.0",
    # L3 — memory management engine for RAG / retrieval pipelines
    "isage-neuromem>=0.2.1.4",
    # L4 — unified CLI (sage command)
    "isage-cli>=0.2.4.25",
    # LLM Gateway — unified inference gateway and control plane
    "isagellm>=0.5.4.3",
]

license = "MIT"

[project.optional-dependencies]
full = [
    # L2 — continual-learning / coreset selection for tool-use (SIAS)
    "isage-sias>=0.1.0",
    # L6 — dataset management for fine-tuning and benchmark workflows
    "isage-data>=0.2.3.2",
    # L6 — visual workflow builder and LLM playground
    "isage-studio>=0.2.4.23",
]
dev = [
    # External developer workflow owner (independently released)
    "isage-dev-tools>=0.1.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    # Quality
    "ruff>=0.15.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "isage-pypi-publisher>=0.2.1.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/SAGE"
Documentation = "https://intellistream.github.io/SAGE-Pub/"
Repository = "https://github.com/intellistream/SAGE.git"
"Bug Tracker" = "https://github.com/intellistream/SAGE/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
exclude = ["sage.dev*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic.version]
attr = "sage._version.__version__"

[tool.ruff]
extend = "tools/ruff.toml"

[tool.mypy]
cache_dir = ".sage/cache/mypy"
ignore_missing_imports = true
